fix(legend): aligning of cells

--- a/components/legend.module.css
+++ b/components/legend.module.css
@@ -18,6 +18,7 @@ the MPL was not distributed with this file, You can obtain one at http://mozilla
 .column {
   display: grid;
   grid-template-columns: auto 1fr;
+  align-items: flex-start;
   gap: 0.5rem;
   padding: 0px 0.5rem;
 }
